# flowcell-illumina

./: CMakeLists.txt  README.md
include/analysis/: decoder.hpp  detector.hpp  preprocessor.hpp
include/common/: types.hpp
include/data-generation/: datagen.hpp
include/io/: frame_loader.hpp
src/: generate_test_data.cpp  main.cpp  run_analysis.cpp
src/analysis/: decoder.cpp  detector.cpp  preprocessor.cpp
src/data-generation/: datagen.cpp
src/io/: frame_loader.cpp
